add template for cryptopals and small update for cryptohack encoding module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,28 @@ members = [
     "hacks/general/encoding/bytes_and_big_integers",
     "hacks/general/encoding/encoding_challenge",
     "hacks/general/encoding/hex",
-
+    "pals/set1/_01_convert_hex_to_base_64",
+    "pals/set1/_02_fixed_xor",
+    "pals/set1/_03_single_byte_xor_cipher",
+    "pals/set1/_04_detect_single_character_xor",
+    "pals/set1/_05_implement_repeating_key_xor",
+    "pals/set1/_06_break_repeating_key_xor",
+    "pals/set1/_07_aes_in_ecb_mode",
+    "pals/set1/_08_detect_aes_in_ecb_mode",
+    "pals/set2/_09_implement_pkcs7_padding",
+    "pals/set2/_10_implement_cbc_mode",
+    "pals/set2/_11_an_ecb_cbc_detection_oracle",
+    "pals/set2/_12_byte_at_a_time_ecb_decryption_simple",
+    "pals/set2/_13_ecb_cut_and_paste",
+    "pals/set2/_14_byte_at_a_time_ecb_decryption_harder",
+    "pals/set2/_15_pkcs7_padding_validation",
+    "pals/set2/_16_cbc_bitflipping_attacks",
+    "pals/set3/_17_the_cbc_padding_oracle",
+    "pals/set3/_18_implement_ctr_the_stream_cipher_mode",
+    "pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions",
+    "pals/set3/_20_break_fixed_nonce_ctr_statistically",
+    "pals/set3/_21_implement_the_mt19937_mersenne_twister_rng",
+    "pals/set3/_22_crack_an_mt19937_seed",
+    "pals/set3/_23_clone_an_mt19937_rng_from_its_output",
+    "pals/set3/_24_create_the_mt_19937_stream_cipher_ans_break_it",
 ]
