--- a/pals/set1/_01_convert_hex_to_base_64/Cargo.toml
+++ b/pals/set1/_01_convert_hex_to_base_64/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "encoding_challenge"
+name = "_01_convert_hex_to_base_64"
 version = "0.1.0"
-authors = ["tikhono <tihonovandrey11@gmail.com>"]
+authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-telnet = ""
-serde_json = ""
-serde = { version = "1.0", features = ["derive"] }
+base64 ="0.13.0"
+hex = "0.4"
