--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ members = [
     "hacks/general/encoding/bytes_and_big_integers",
     "hacks/general/encoding/encoding_challenge",
     "hacks/general/encoding/hex",
+    "hacks/general/xor/xor_starter",
+    "hacks/general/xor/xor_properties",
+    "hacks/general/xor/favourite_byte",
     "pals/set1/_01_convert_hex_to_base_64",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
