--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "hacks/general/xor/favourite_byte",
     "hacks/block_ciphers/aes/structure_of_aes",
     "hacks/block_ciphers/aes/round_keys",
+    "hacks/block_ciphers/aes/confusion_through_substitution",
     "pals/set1/_01_convert_hex_to_base_64",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
