--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "hacks/block_ciphers/aes/structure_of_aes",
     "hacks/block_ciphers/aes/round_keys",
     "hacks/block_ciphers/aes/confusion_through_substitution",
+    "hacks/block_ciphers/aes/diffusion_through_permutation",
     "pals/set1/_01_convert_hex_to_base_64",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
