--- a/hacks/general/encoding/encoding_challenge/Cargo.toml
+++ b/hacks/general/encoding/encoding_challenge/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2018"
 telnet = ""
 serde_json = ""
 serde = { version = "1.0", features = ["derive"] }
+rot13 = "0.1.1"
+base64 ="0.13.0"
+hex = "0.4"
+ascii = "1.0.0"
+bytes_and_big_integers = { path = "../bytes_and_big_integers" }
