--- a/hacks/block_ciphers/block_cipher_modes/passwords_as_keys/Cargo.toml
+++ b/hacks/block_ciphers/block_cipher_modes/passwords_as_keys/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bringing_it_all_together"
+name = "passwords_as_keys"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nalgebra = "*"
-ascii = "1.0.0"
-structure_of_aes = { path = "../structure_of_aes" }
-diffusion_through_permutation = { path = "../diffusion_through_permutation" }
+curl = ""
+rust-crypto = ""
+hex = "0.4"
