--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ members = [
     "hacks/block_ciphers/block_cipher_modes/symmetry",
     "hacks/block_ciphers/block_cipher_modes/ecb_cbc_wtf",
     "hacks/block_ciphers/block_cipher_modes/ctrime",
+    "hacks/block_ciphers/block_cipher_modes/stream_of_consciousness",
+    "hacks/block_ciphers/block_cipher_modes/flipping_cookie",
     "pals/set1/_01_convert_hex_to_base_64",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
