--- a/hacks/block_ciphers/block_cipher_modes/stream_of_consciousness/Cargo.toml
+++ b/hacks/block_ciphers/block_cipher_modes/stream_of_consciousness/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ctrime"
+name = "stream_of_consciousness"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-curl = ""
 hex = "0.4"
 ascii = ""
 ecb_cbc_wtf = {path = "../ecb_cbc_wtf"}
