--- a/pals/set1/_03_single_byte_xor_cipher/Cargo.toml
+++ b/pals/set1/_03_single_byte_xor_cipher/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+_02_fixed_xor = {path = "../_02_fixed_xor"}
+hex = "0.4"
+ascii = ""
+whatlang = ""
