--- a/pals/set1/_05_implement_repeating_key_xor/Cargo.toml
+++ b/pals/set1/_05_implement_repeating_key_xor/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+_02_fixed_xor = {path = "../../../pals/set1/_02_fixed_xor"}
+hex = "0.4"
