--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "hacks/general/xor/xor_properties",
     "hacks/general/xor/favourite_byte",
     "hacks/general/xor/you_either_know_xor_you_dont",
+    "hacks/general/xor/lemur_xor",
     "hacks/block_ciphers/aes/structure_of_aes",
     "hacks/block_ciphers/aes/round_keys",
     "hacks/block_ciphers/aes/confusion_through_substitution",
