--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ members = [
     "hacks/general/xor/favourite_byte",
     "hacks/general/xor/you_either_know_xor_you_dont",
     "hacks/general/xor/lemur_xor",
+    "hacks/general/mathematics/greatest_common_divisor",
+    "hacks/general/mathematics/extended_gcd",
+    "hacks/general/mathematics/modular_arithmetic_1",
+    "hacks/general/mathematics/modular_arithmetic_2",
+    "hacks/general/mathematics/modular_inverting",
     "hacks/block_ciphers/aes/structure_of_aes",
     "hacks/block_ciphers/aes/round_keys",
     "hacks/block_ciphers/aes/confusion_through_substitution",
