--- a/pals/set2/_15_pkcs7_padding_validation/Cargo.toml
+++ b/pals/set2/_15_pkcs7_padding_validation/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+_09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
