--- a/pals/set2/_11_an_ecb_cbc_detection_oracle/Cargo.toml
+++ b/pals/set2/_11_an_ecb_cbc_detection_oracle/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+_09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
+rand = "0.8.3"
+openssl = ""
