--- a/pals/set2/_16_cbc_bitflipping_attacks/Cargo.toml
+++ b/pals/set2/_16_cbc_bitflipping_attacks/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+_09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
+hex = "0.4"
+rand = "0.8.3"
+openssl = ""
+ascii = "1.0.0"
