19 + 20 + readmes + fixes from discussion

--- a/hacks/block_ciphers/block_cipher_modes/stream_of_consciousness/Cargo.toml
+++ b/hacks/block_ciphers/block_cipher_modes/stream_of_consciousness/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2018"
 [dependencies]
 hex = "0.4"
 ascii = ""
+itertools = ""
 ecb_cbc_wtf = {path = "../ecb_cbc_wtf"}
+_06_break_repeating_key_xor = {path = "../../../../pals/set1/_06_break_repeating_key_xor"}
