--- a/pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions/Cargo.toml
+++ b/pals/set3/_19_break_fixed_nonce_ctr_mode_usong_substitutions/Cargo.toml
@@ -7,3 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hex = "0.4"
+itertools = "0.10.0"
+base64 ="0.13.0"
+ascii = ""
+whatlang = ""
+
+_02_fixed_xor = {path = "../../../pals/set1/_02_fixed_xor"}
+_03_single_byte_xor_cipher = {path = "../../../pals/set1/_03_single_byte_xor_cipher"}
+_05_implement_repeating_key_xor = {path = "../../../pals/set1/_05_implement_repeating_key_xor"}
+_06_break_repeating_key_xor = {path = "../../../pals/set1/_06_break_repeating_key_xor"}
