26 is 16 but with ctr

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,5 @@ members = [
     "pals/set3/_22_crack_an_mt19937_seed",
     "pals/set3/_23_clone_an_mt19937_rng_from_its_output",
     "pals/set3/_24_create_the_mt_19937_stream_cipher_ans_break_it",
+    "pals/set4/_26_ctr_bitflipping",
 ]
