--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,11 @@ members = [
     "hacks/block_ciphers/block_cipher_modes/ctrime",
     "hacks/block_ciphers/block_cipher_modes/stream_of_consciousness",
     "hacks/block_ciphers/block_cipher_modes/flipping_cookie",
+    "hacks/diffie_hellman/diffie_hellman_starter_1",
+    "hacks/diffie_hellman/diffie_hellman_starter_2",
+    "hacks/diffie_hellman/diffie_hellman_starter_3",
+    "hacks/diffie_hellman/diffie_hellman_starter_4",
+    "hacks/diffie_hellman/diffie_hellman_starter_5",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
     "pals/set1/_04_detect_single_character_xor",
