--- a/hacks/diffie_hellman/diffie_hellman_starter_5/Cargo.toml
+++ b/hacks/diffie_hellman/diffie_hellman_starter_5/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num = "0.4"
+hex = "0.4"
+sha-1 = "0.9.6"
+openssl = "0.10.34"
