--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,11 @@ members = [
     "hacks/block_ciphers/block_cipher_modes/stream_of_consciousness",
     "hacks/block_ciphers/block_cipher_modes/flipping_cookie",
     "hacks/rsa/rsa_starter_1",
+    "hacks/rsa/rsa_starter_2",
+    "hacks/rsa/rsa_starter_3",
+    "hacks/rsa/rsa_starter_4",
+    "hacks/rsa/rsa_starter_5",
+    "hacks/rsa/rsa_starter_6",
     "hacks/elliptic_curves/background_reading",
     "hacks/diffie_hellman/diffie_hellman_starter_1",
     "hacks/diffie_hellman/diffie_hellman_starter_2",
