--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ members = [
     "hacks/rsa/rsa_starter_4",
     "hacks/rsa/rsa_starter_5",
     "hacks/rsa/rsa_starter_6",
+    "hacks/rsa/factoring",
+    "hacks/rsa/signing_server",
     "hacks/elliptic_curves/background_reading",
     "hacks/diffie_hellman/diffie_hellman_starter_1",
     "hacks/diffie_hellman/diffie_hellman_starter_2",
