--- a/hacks/diffie_hellman/parameter_injection/Cargo.toml
+++ b/hacks/diffie_hellman/parameter_injection/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-telnet = ""
 serde_json = ""
 serde = { version = "1.0", features = ["derive"] }
 num = "0.4"
@@ -15,3 +14,4 @@ hex = "0.4"
 sha-1 = "0.9.6"
 aes = ""
 block-modes = "0.8.1"
+tokio = { version = "1", features = ["full"] }
