--- a/hacks/rsa/manyprime/Cargo.toml
+++ b/hacks/rsa/manyprime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "monoprime"
+name = "manyprime"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
