intermediate commit for rsa task set

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ members = [
     "hacks/rsa/manyprime",
     "hacks/rsa/salty",
     "hacks/rsa/modulus_inutilis",
+    "hacks/rsa/everything_is_big",
+    "hacks/rsa/everything_is_still_big",
+    "hacks/rsa/infinite_descent",
+    "hacks/rsa/marins_secrets",
     "hacks/rsa/signing_server",
     "hacks/elliptic_curves/background_reading",
     "hacks/diffie_hellman/diffie_hellman_starter_1",
