--- a/hacks/diffie_hellman/additive/Cargo.toml
+++ b/hacks/diffie_hellman/additive/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = ""
+serde_json = "1.0.64"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 num = "0.4"
