--- a/hacks/rsa/marins_secrets/Cargo.toml
+++ b/hacks/rsa/marins_secrets/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "parameter_injection"
+name = "marins_secrets"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
@@ -7,11 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.64"
-serde = { version = "1.0", features = ["derive"] }
 num = "0.4"
-hex = "0.4"
-sha-1 = "0.9.6"
-aes = "0.7.2"
-block-modes = "0.8.1"
-tokio = { version = "1", features = ["full"] }
+diffie_hellman_starter_1 = {path = "../../diffie_hellman/diffie_hellman_starter_1"}
