--- a/hacks/rsa/everything_is_still_big/Cargo.toml
+++ b/hacks/rsa/everything_is_still_big/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 num = "0.4"
 diffie_hellman_starter_1 = {path = "../../diffie_hellman/diffie_hellman_starter_1"}
+lll-rs = "0.2.0"
+rug = "1.12.0"
