--- a/hacks/rsa/factoring/Cargo.toml
+++ b/hacks/rsa/factoring/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+#num = "0.2.1"
 num-primes = "0.1.2"
-num-bigint = ""
-num-traits = ""
-num-integer = ""
+num-bigint = "0.2"
+num-traits = "0.2.14"
+num-integer = "0.1.44"
