--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ members = [
     "hacks/elliptic_curves/background_reading",
     "hacks/elliptic_curves/point_negation",
     "hacks/elliptic_curves/point_addition",
+    "hacks/elliptic_curves/scalar_multiplication",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
     "pals/set1/_04_detect_single_character_xor",
