--- a/pals/set6/_41_implement_unpadded_message_recovery_oracle/Cargo.toml
+++ b/pals/set6/_41_implement_unpadded_message_recovery_oracle/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rsa_starter_5"
+name = "_41_implement_unpadded_message_recovery_oracle"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 num = "0.4"
-diffie_hellman_starter_1 = {path = "../../diffie_hellman/diffie_hellman_starter_1"}
+diffie_hellman_starter_1 = {path = "../../../hacks/diffie_hellman/diffie_hellman_starter_1"}
