--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,7 @@ members = [
     "pals/set5/_33_implement_diffie_hellman",
     "pals/set5/_34_parameter_injection",
     "pals/set5/_35_implement_dh_with_malicious_g_parameters",
+    "pals/set5/_39_implement_rsa",
     "pals/set6/_41_implement_unpadded_message_recovery_oracle",
     "pals/set6/_42_bleichenbachers_e3_rsa_attack",
     "pals/set6/_43_dsa_key_recovery_from_nonce",
