--- a/hacks/general/xor/you_either_know_xor_you_dont/Cargo.toml
+++ b/hacks/general/xor/you_either_know_xor_you_dont/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 hex = "0.4"
 _02_fixed_xor = {path = "../../../../pals/set1/_02_fixed_xor"}
-ascii = ""
+ascii = "1.0.0"
