--- a/pals/set2/_11_an_ecb_cbc_detection_oracle/Cargo.toml
+++ b/pals/set2/_11_an_ecb_cbc_detection_oracle/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 _09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
 rand = "0.8.3"
-openssl = ""
+openssl = "0.10.35"
