--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,4 +89,5 @@ members = [
     "pals/set6/_42_bleichenbachers_e3_rsa_attack",
     "pals/set6/_43_dsa_key_recovery_from_nonce",
     "pals/set6/_44_dsa_nonce_recovery_from_repeated_nonce",
+    "pals/set6/_45_dsa_parameter_tampering",
 ]
