--- a/hacks/block_ciphers/block_cipher_modes/ecb_cbc_wtf/Cargo.toml
+++ b/hacks/block_ciphers/block_cipher_modes/ecb_cbc_wtf/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-curl = ""
+curl = "0.4.38"
 hex = "0.4"
-ascii = ""
+ascii = "1.0.0"
 _02_fixed_xor = {path = "../../../../pals/set1/_02_fixed_xor"}
