--- a/hacks/block_ciphers/block_cipher_modes/passwords_as_keys/Cargo.toml
+++ b/hacks/block_ciphers/block_cipher_modes/passwords_as_keys/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-curl = ""
-rust-crypto = ""
+curl = "0.4.38"
+rust-crypto = "0.2.36"
 hex = "0.4"
