--- a/hacks/general/encoding/encoding_challenge/Cargo.toml
+++ b/hacks/general/encoding/encoding_challenge/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-telnet = ""
-serde_json = ""
+telnet = "0.1.4"
+serde_json = "1.0.64"
 serde = { version = "1.0", features = ["derive"] }
 rot13 = "0.1.1"
 base64 ="0.13.0"
