--- a/hacks/general/xor/favourite_byte/Cargo.toml
+++ b/hacks/general/xor/favourite_byte/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 _02_fixed_xor = {path = "../../../../pals/set1/_02_fixed_xor"}
 hex = "0.4"
-ascii = ""
+ascii = "1.0.0"
