--- a/pals/set1/_04_detect_single_character_xor/Cargo.toml
+++ b/pals/set1/_04_detect_single_character_xor/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 _02_fixed_xor = {path = "../../../pals/set1/_02_fixed_xor"}
 _03_single_byte_xor_cipher = {path = "../../../pals/set1/_03_single_byte_xor_cipher"}
 hex = "0.4"
-ascii = ""
+ascii = "1.0.0"
