--- a/pals/set1/_06_break_repeating_key_xor/Cargo.toml
+++ b/pals/set1/_06_break_repeating_key_xor/Cargo.toml
@@ -13,8 +13,8 @@ _03_single_byte_xor_cipher = {path = "../../../pals/set1/_03_single_byte_xor_cip
 itertools = "0.10.0"
 base64 ="0.13.0"
 _02_fixed_xor = {path = "../_02_fixed_xor"}
-ascii = ""
-whatlang = ""
+ascii = "1.0.0"
+whatlang = "0.12.0"
 
 [features]
 map_first_last = []
