--- a/pals/set2/_13_ecb_cut_and_paste/Cargo.toml
+++ b/pals/set2/_13_ecb_cut_and_paste/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 _09_implement_pkcs7_padding = {path = "../_09_implement_pkcs7_padding"}
 hex = "0.4"
 rand = "0.8.3"
-openssl = ""
+openssl = "0.10.35"
 ascii = "1.0.0"
 lazy_static = "1.4.0"
