--- a/pals/set6/_44_dsa_nonce_recovery_from_repeated_nonce/Cargo.toml
+++ b/pals/set6/_44_dsa_nonce_recovery_from_repeated_nonce/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "_44_dsa_nonce_recovery_from_repeated_nonce"
+name = "_45_dsa_parameter_tampering"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num = "0.4"
-diffie_hellman_starter_1 = {path = "../../../hacks/diffie_hellman/diffie_hellman_starter_1"}
-rayon = "1.5.1"
-sha-1 = "0.9.6"
-hex = "0.4"
+openssl = "0.10.35"
