finish ecc + other fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ members = [
     "hacks/elliptic_curves/scalar_multiplication",
     "hacks/elliptic_curves/curves_and_logs",
     "hacks/elliptic_curves/efficient_exchange",
+    "hacks/elliptic_curves/smooth_criminal",
+    "hacks/elliptic_curves/exceptional_curves",
     "pals/set1/_02_fixed_xor",
     "pals/set1/_03_single_byte_xor_cipher",
     "pals/set1/_04_detect_single_character_xor",
