--- a/pals/set4/_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak/Cargo.toml
+++ b/pals/set4/_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "_29_break_a_sha_1_keyed_mac_using_length_extension"
+name = "_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak"
 version = "0.1.0"
 authors = ["tikhono <tikhonov.andrii.m@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sha-1 = "0.9.6"
+hmac = "0.11.0"
+sha2 = "0.9.5"
